@@ -1,202 +1,140 @@
 package com.app;
 
-import java.awt.*;
-import java.util.*;
+import java.awt.Color;
+import java.awt.Point;
+import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Random;
+import java.util.Set;
 
 public class Node extends Thread {
-	private enum NodeState {
-		 IDLE,           // Green - Not interested in CS
-		 REQUESTING,     // Orange - Sent REQUEST messages, waiting for replies
-		 IN_CS,          // Red - Currently in critical section
-		}
-	
-    private static int uidCounter = 0;
-    private static final List<Node> all_nodes = new ArrayList<>();
-    private static Graph graph = null;
+    private static final List<Node> allNodes = new ArrayList<>();
+    private static final int CS_DURATION = 1000;
 
     private final int nodeId;
+    private int clock = 0;
+    private int requestTime = -1;
+    private boolean wantsCS = false;
+    private boolean inCS = false;
+    private final Set<Integer> repliesReceived = new HashSet<>();
+    private final Set<Node> deferredReplies = new HashSet<>();
+    private final SignalManager manager;
+    private final Graph graph;
     private Point position;
-    private Color color;
-    private final Random rand = new Random();
-    private volatile NodeState currentState = NodeState.IDLE;
-    private long logicalClock = 0;
-    private long requestTimestamp = -1;
-    
-    // Ricart-Agrawala specific fields
-    private final Set<Integer> pendingReplies = Collections.synchronizedSet(new HashSet<>());
-    private final Queue<Integer> deferredReplies = new ArrayDeque<>();
+    private Color color = Color.BLUE;
 
-    private Node() {
-        super("Node-" + uidCounter);
-        this.nodeId = uidCounter++;
-        this.position = new Point(rand.nextInt(700) + 50, rand.nextInt(500) + 50);
-        this.color = Color.GREEN;
-
-        graph.repaint();
+    public Node(int id, Point pos, Graph g, SignalManager m) {
+        this.nodeId = id;
+        this.position = generateNonOverlappingPosition();
+        this.graph = g;
+        this.manager = m;
+        allNodes.add(this);
     }
-    
+
     public static List<Node> all() {
-        return Collections.unmodifiableList(all_nodes);
+        return allNodes;
     }
-    
-    public static Node push(Graph graph) {
-    	if (Node.graph == null) {Node.graph = graph;}
-    	Node node = new Node();
-    	all_nodes.add(node);
-    	return node;
+
+    public static Node push(Graph g, SignalManager m) {
+        int id = allNodes.size();
+        Point pos = generateNonOverlappingPosition();
+        Node node = new Node(id, pos, g, m);
+        allNodes.add(node);
+        return node;
     }
+
     public static Node pull() {
-    	Node.uidCounter--;
-    	Node removed = all_nodes.removeLast();
-    	removed.interrupt();
-    	for (Node node : Node.all()) {
-    		 node.clear(removed);
-    	} 
-    	graph.repaint();
-    	return removed;
-    }
-    public void clear(Node removed) {
-    	int id = removed.getNodeId();
-    	pendingReplies.remove(id);
-    	deferredReplies.remove(id);
+        return allNodes.isEmpty() ? null : allNodes.remove(allNodes.size() - 1);
     }
 
-    public int getNodeId() {
-        return nodeId;
-    }
-
-    public Point getPosition() {
-        return position;
-    }
-
-    public void setPosition(Point position) {
-        this.position = position;
-    }
-
-    public synchronized Color getColor() {
-        return color;
-    }
-
-    public synchronized void setColor(Color color) {
-        this.color = color;
-        graph.repaint();
-    }
-    
-    private synchronized Node get(int nodeId) {
-		return all_nodes.get(nodeId);
-    }
-
-    private void requestCriticalSection() {
-        if (currentState != NodeState.IDLE) return;
-        
-        currentState = NodeState.REQUESTING;
-        requestTimestamp = ++logicalClock;
-        pendingReplies.clear();
-        
-        // Send REQUEST to all other nodes
-        for (Node other : all_nodes) {
-            if (other != this) {
-                pendingReplies.add(other.getNodeId());
-                other.handleRequest(nodeId, requestTimestamp);
-            }
-        }
-        updateColor();
-    }
-
-    public synchronized void handleRequest(int fromNodeId, long timestamp) {
-        logicalClock = Math.max(logicalClock + 1, timestamp);
-        
-        boolean shouldReplyImmediately = true;
-        
-        if (currentState == NodeState.REQUESTING) {
-            // Compare timestamps for priority
-            if (timestamp < requestTimestamp || 
-               (timestamp == requestTimestamp && fromNodeId < nodeId)) {
-                // Other has higher priority, reply immediately
-                shouldReplyImmediately = true;
-            } else {
-                // We have higher priority, defer reply
-                shouldReplyImmediately = false;
-                deferredReplies.offer(fromNodeId);
-            }
-        } else if (currentState == NodeState.IN_CS) {
-            // We're in CS, defer reply
-            shouldReplyImmediately = false;
-            deferredReplies.offer(fromNodeId);
-        }
-        
-        if (shouldReplyImmediately) {
-            Node requester = get(fromNodeId);
-            requester.handleReply(nodeId);
-        }
-    }
-    
-    public synchronized void handleReply(int fromNodeId) {
-        pendingReplies.remove(fromNodeId);
-        
-        // If we have all replies, enter CS
-        if (pendingReplies.isEmpty() && currentState == NodeState.REQUESTING) {
-            enterCriticalSection();
+    private static Point generateNonOverlappingPosition() {
+        Random r = new Random();
+        while (true) {
+            Point p = new Point(100 + r.nextInt(600), 100 + r.nextInt(400));
+            boolean overlaps = allNodes.stream().anyMatch(n -> p.distance(n.position) < 70);
+            if (!overlaps) return p;
         }
     }
 
-    private void enterCriticalSection() {
-        currentState = NodeState.IN_CS;
-        updateColor();
-        
-        // Stay in CS for random duration
-        new Thread(() -> {
-            try {
-                Thread.sleep(1000 + new Random().nextInt(4000)); // 1-5 seconds
-                exitCriticalSection();
-            } catch (InterruptedException e) {
-                Thread.currentThread().interrupt();
-            }
-        }).start();
-    }
-    
-    private synchronized void exitCriticalSection() {
-        currentState = NodeState.IDLE;
-        
-        // Send all deferred replies
-        while (!deferredReplies.isEmpty()) {
-            int deferredNodeId = deferredReplies.poll();
-            Node deferredNode = get(deferredNodeId);
-            deferredNode.handleReply(nodeId);
-        }
-        
-        updateColor();
-    }
-    
+    public int getNodeId() { return nodeId; }
+    public Point getPosition() { return position; }
+    public Color getColor() { return color; }
+
     @Override
     public void run() {
-        Random rand = new Random();
-        while (!isInterrupted()) {
-            try {
-                // Wait random time before potentially requesting CS
-                Thread.sleep(3000 + rand.nextInt(8000)); // 3-8 seconds
-                
-                // 20% chance to request CS when idle
-                if (currentState == NodeState.IDLE && rand.nextDouble() < 0.2) {
-                    requestCriticalSection();
-                }
-                
-            } catch (InterruptedException e) {
-                Thread.currentThread().interrupt();
-                break;
+        try {
+            while (true) {
+                Thread.sleep(2000 + new Random().nextInt(3000));
+                requestCS();
+            }
+        } catch (InterruptedException ignored) {}
+    }
+
+    public void requestCS() {
+        clock++;
+        requestTime = clock;
+        wantsCS = true;
+        repliesReceived.clear();
+        color = Color.YELLOW;
+
+        for (Node other : allNodes) {
+            if (other != this) {
+                manager.showRequest(this, other);
+                other.receiveRequest(this, requestTime);
             }
         }
+
+        waitForReplies();
+        enterCS();
+        try {
+            Thread.sleep(CS_DURATION);
+        } catch (InterruptedException ignored) {}
+        exitCS();
     }
-    
-    private void updateColor() {
-        Color newColor;
-        switch (currentState) {
-            case IDLE: newColor = Color.GREEN; break;
-            case REQUESTING: newColor = Color.ORANGE; break;
-            case IN_CS: newColor = Color.RED; break;
-            default: newColor = Color.GREEN;
+
+    private void receiveRequest(Node from, int timestamp) {
+        clock = Math.max(clock, timestamp) + 1;
+
+        boolean allow = (!wantsCS) ||
+                        (requestTime > timestamp) ||
+                        (requestTime == timestamp && nodeId > from.nodeId);
+
+        if (allow) {
+            manager.showReply(this, from);
+            from.receiveReply(this);
+        } else {
+            deferredReplies.add(from);
         }
-        setColor(newColor);
+    }
+
+    private void receiveReply(Node from) {
+        repliesReceived.add(from.nodeId);
+    }
+
+    private void waitForReplies() {
+        while (repliesReceived.size() < allNodes.size() - 1) {
+            try {
+                Thread.sleep(100);
+            } catch (InterruptedException ignored) {}
+        }
+    }
+
+    private void enterCS() {
+        color = Color.GREEN;
+        inCS = true;
+    }
+
+    private void exitCS() {
+        color = Color.BLUE;
+        inCS = false;
+        wantsCS = false;
+        requestTime = -1;
+
+        for (Node deferred : deferredReplies) {
+            manager.showReply(this, deferred);
+            deferred.receiveReply(this);
+        }
+        deferredReplies.clear();
     }
 }
